packages/yew-router-macro/tests/routable_derive/bad-ats-fail.stderr
error: at attribute not found
 --> $DIR/bad-ats-fail.rs:1:10
  |
1 | #[derive(yew_router::Routable)]
  |          ^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `RoutesTwo: Clone` is not satisfied
  --> $DIR/bad-ats-fail.rs:6:10
   |
6  | #[derive(yew_router::Routable)]
   |          ^^^^^^^^^^^^^^^^^^^^ the trait `Clone` is not implemented for `RoutesTwo`
   |
  ::: $WORKSPACE/packages/yew-router/src/routable.rs
   |
   | pub trait Routable: Sized + Clone {
   |                             ----- required by this bound in `Routable`
   |
   = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)
